
Check out [url=http://aok.heavengames.com/blacksmith/showfile.php?fileid=11349]this[/url] program also. It's for graphical modding.

For editing language files in The Conquerors,
I recommend [url=http://aok.heavengames.com/blacksmith/showfile.php?fileid=10819]this download[/url].

[b]Version History[/b]
Guide makers et cetera, please include the version into which your guide was written.

Version [b]2021.3.22[/b] (pending):
-Fixed several bugs in effects tab.
-Reduced lag when dragging main window.

Version [b]2021.3.15[/b]:
-Updated effects tab for UserPatch 1.5.
-More accurate text input error messages.

Version [b]2021.3.12[/b]:
-Added support for Expanding Fronts 1.3 and beyond.
-Fixed bugs in effect commanmd type drop down menu.

Version [b]2020.10.2[/b]:
-Support for new charge and damage resistance features in AoE II DE.
-Revealed hidden boxes in tech effects for new features in AoE II DE.

Version [b]2020.6.12[/b]:
-Fixed bug with language text indexes.
-Renamed technology cost and time modifiers for AoE DE.

Version [b]2020.3.30[/b]:
-Support for new AoE II DE game features.

Version [b]2019.11.28[/b]:
-Added more unit search filters.

Version [b]2019.11.22[/b]:
-Fixed default paths for AoE II DE.

Version [b]2019.7.2[/b]:
-Negative armor types can be changed via effects.
-Supports newer game versions.

Version [b]2018.1.29[/b]:
-Marked resource multiplier as not available in AoE 1.

Version [b]2017.11.7[/b]:
-Internal unit name filter works the way it used to.
-Graphics can be filtered by rainbow.
-Images are saved centered on hotspot.

Version [b]2017.10.6[/b]:
-Saving an SLP handles player color properly.
-Deleting terrain tables uses correct indexes.
-Unit terrain table defaults to 0.
-Small improvements here and there.

Version [b]2017.5.17[/b]:
-Fixed loading order of DRS files.
-Fixed a problem with angle sound count.
-Editing box widths are customizable.
-New icon by gagman.

Version [b]2017.3.14[/b]:
-Scrolling lag fixed.